# ratatui-boilerplate

./: .gitignore  Cargo.toml  default.nix~  readme.md  shell.nix~
.direnv/: flake-profile-1-link
rpsq-rs/: default.nix  flake.nix  shell.nix
rpsq-rs/demo/: Cargo.toml
rpsq-rs/src/: app.rs~
src/: main.rs~  ui.rs~
